@@ -825,6 +825,8 @@ of MediaWiki:Newpagetext) to &action=edit, if page is new.
   name attribute)
 * Wrap message page insertions in a transaction to speed up installation
 * Fix Special:MovePage invalid HTML attribute for reason textarea
+* Avoid notice warning on edit with no User-Agent header
+
 
 === Caveats ===
 
